# Handover

./: .gitignore  LICENSE  README.md  VERSION_POLICY.md  WINDOWS_BUILD.md  electron-builder.config.cjs  eslint.config.js  index.html  package-lock.json  package.json  push-to-github.sh  vite.config.js
backend/: main.py  requirements.txt
backend/services/: docker_runtime.py
handover/docker/: README.md  build-base.sh
handover_app/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
handover_app/scripts/: build-tauri-appimage.sh  dev-tauri.sh  generate-icons.py  prepare-backend-sidecar.js  prepare-backend-sidecar.sh
handover_app/src/: App.jsx  BroadcastModal.jsx  HandoffHistoryPanel.jsx  HandoverModal.jsx  ProjectSettings.jsx  ResourceDashboardPanel.jsx  Sidebar.jsx  TabBar.jsx  TerminalView.jsx  TitleBar.jsx  api.js  clipboard.js  main.cjs  main.jsx  (+4 more)
handover_app/src-tauri/: Cargo.toml  tauri.conf.json
handover_app/src-tauri/capabilities/: default.json
handover_app/src-tauri/icons/: icon.icns
handover_app/src-tauri/permissions/: allow-get-backend-port.toml
handover_app/src-tauri/src/: lib.rs  main.rs
handover_python/: .gitignore  README.md  electron-builder.config.cjs  handover-backend.spec  package-lock.json  package.json
handover_rust/: Cargo.toml  README.md  build-check.sh
handover_rust/src/: docker.rs  governor.rs  handoff.rs  local_config.rs  main.rs  platform.rs  pty.rs  state.rs
src/: App.jsx  ProjectSettings.jsx  Sidebar.jsx  TerminalView.jsx  api.js  main.cjs  useGovernorEvents.js
(+8 files in other folders)
